# Hytale-ImGui-Dll

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FetchFunchook.cmake  FetchMinhook.cmake
src/: Hooks.cc  Hooks.h  HytaleImGui.cpp
src/client/: CMakeLists.txt  DllMain.cc  Hooks.cc  Hooks.h  ModuleManager.h  TFuncHook.h
src/client/cmake/: FetchImgui.cmake
src/client/modules/: ImGuiModule.cc  ImGuiModule.h  Module.h
src/client/sdk/: GDI32.h
src/client/utils/: Console.cc  Memory.cc  Memory.h  ProcessHelper.cc  ProcessHelper.h
src/common/imgui/backends/: imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp
src/modules/: Module.h
src/sdk/: GDI32.cc
src/utils/: Console.h  Memory.cc  Memory.h  ProcessHelper.cc  ProcessHelper.h
